     database existed but no data was available
   - ./configure output could show invalid install paths with some
     parameter combinations (pull request by Severin Glöckner)
 - New
   - Add --large / --small options to image output and LargeFonts
     configuration option for controlling the output font size
   - Add --scale for scaling the image output to a given percent
   - Add bar visualizations for traffic estimations
   - Allow writing image output to a filename starting with -
   - Add --initdb to daemon for creating a new empty database without
     having the daemon process staying running, doesn't discard data
     if a database already exists
   - Add configuration option BarColumnShowsRate to have the bar column
     in image list outputs be scaled according to the average rate column
     values when those values are visible, disabled by default


2.6 / 20-Jan-2020

 - Fixed
   - --json and --xml didn't support having both mode and limit parameters
     defined at the same time as documented, broken since previous release
   - Documentation was using a mix of "count" and "limit" for the option of
     limiting the maximum number of shown entries in queries
   - Summary image output would segmentation fault when the database existed
     but didn't yet contain any daily or monthly data for the selected
     interface
 - New
   - Add --limit as an alternative way for controlling the length of outputs


2.5 / 14-Jan-2020

 - Fixed
   - Automatic interface selection wasn't done for --traffic and --live when
     the Interface configuration setting was left empty
   - --setalias didn't do anything when used in combination with --add
   - -l / --live and -tr default to first interface instead of producing an
     error if a interface merge is requested


2.4 / 18-Aug-2019

 - Fixed
   - Daemon didn't correctly wait when acquiring database lock for data write
     which could result in unnecessary errors and even process exit if an