@@ -172,8 +172,9 @@ SummaryRate 1
 # transparent background (1 = enabled, 0 = disabled)
 TransparentBg 0
 
-# image fonts and scale (percent)
+# image size control
 LargeFonts 0
+LineSpacingAdjustment 0
 ImageScale 100
 
 # traffic estimate bar style
