@@ -461,6 +461,11 @@ Scale output to given percent. Value range: 50..500
 Increase the size of used fonts. 1 = enabled, 0 = disabled.
 
 .TP
+.B LineSpacingAdjustment
+Adjust line spacing in list format outputs. Positive values increase the
+space between lines while negative values reduce it. Value range: -5..10
+
+.TP
 .B SummaryRate
 Show rate in summary output if available. 1 = enabled, 0 = disabled.
 
