@@ -72,6 +72,7 @@ int loadcfg(const char *cfgfile)
 		 {"SummaryRate", 0, &cfg.summaryrate, 0, 0},
 		 {"TransparentBg", 0, &cfg.transbg, 0, 0},
 		 {"LargeFonts", 0, &cfg.largefonts, 0, 0},
+		 {"LineSpacingAdjustment", 0, &cfg.linespaceadjust, 0, 0},
 		 {"ImageScale", 0, &cfg.imagescale, 0, 0},
 		 {"EstimateStyle", 0, &cfg.estimatestyle, 0, 0},
 		 {"BarColumnShowsRate", 0, &cfg.barshowsrate, 0, 0},
@@ -203,6 +204,7 @@ void validatecfg(void)
 	validateint("DatabaseSynchronous", &cfg.dbsynchronous, DBSYNCHRONOUS, -1, 3);
 	validatebool("TransparentBg", &cfg.transbg, TRANSBG);
 	validatebool("LargeFonts", &cfg.largefonts, LARGEFONTS);
+	validateint("LineSpacingAdjustment", &cfg.linespaceadjust, LINESPACEADJUST, -5, 10);
 	validateint("ImageScale", &cfg.imagescale, IMAGESCALE, 50, 500);
 	validateint("EstimateStyle", &cfg.estimatestyle, ESTIMATESTYLE, 0, 2);
 	validatebool("BarColumnShowsRate", &cfg.barshowsrate, BARSHOWSRATE);
@@ -369,6 +371,7 @@ void defaultcfg(void)
 
 	cfg.transbg = TRANSBG;
 	cfg.largefonts = LARGEFONTS;
+	cfg.linespaceadjust = LINESPACEADJUST;
 	cfg.imagescale = IMAGESCALE;
 	cfg.estimatestyle = ESTIMATESTYLE;
 	cfg.barshowsrate = BARSHOWSRATE;
