@@ -188,8 +188,9 @@ void printcfgfile(void)
 	printf("# transparent background (1 = enabled, 0 = disabled)\n");
 	printf("TransparentBg %d\n\n", cfg.transbg);
 
-	printf("# image fonts and scale (percent)\n");
+	printf("# image size control\n");
 	printf("LargeFonts %d\n", cfg.largefonts);
+	printf("LineSpacingAdjustment %d\n", cfg.linespaceadjust);
 	printf("ImageScale %d\n\n", cfg.imagescale);
 
 	printf("# traffic estimate bar style\n");
